---
source: src/resolver.rs
expression: out
---
dplyr=1.1.4 (from http://cran, type=binary, from_lockfile=false, path='')
cli=3.6.3 (from http://cran, type=binary, from_lockfile=false, path='')
generics=0.1.3 (from http://cran, type=binary, from_lockfile=false, path='')
glue=1.8.0 (from http://cran, type=binary, from_lockfile=false, path='')
lifecycle=1.0.4 (from http://cran, type=binary, from_lockfile=false, path='')
magrittr=2.0.3 (from http://cran, type=binary, from_lockfile=false, path='')
pillar=1.10.0 (from http://cran, type=binary, from_lockfile=false, path='')
R6=2.5.1 (from http://cran, type=binary, from_lockfile=false, path='')
rlang=1.1.4 (from http://cran, type=binary, from_lockfile=false, path='')
tibble=3.2.1 (from http://cran, type=binary, from_lockfile=false, path='')
tidyselect=1.2.1 (from http://cran, type=binary, from_lockfile=false, path='')
vctrs=0.6.5 (from http://cran, type=binary, from_lockfile=false, path='')
utf8=1.2.4 (from http://cran, type=binary, from_lockfile=false, path='')
fansi=1.0.6 (from http://cran, type=binary, from_lockfile=false, path='')
pkgconfig=2.0.3 (from http://cran, type=binary, from_lockfile=false, path='')
withr=3.0.2 (from http://cran, type=binary, from_lockfile=false, path='')
